--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -8,7 +8,7 @@ body {
     font-size: 12px;
 }
 
-div {
+div.main {
     margin: 10px;
     padding: 10px;
     background: #EDEDED;
@@ -26,4 +26,24 @@ a:hover {
     font-weight: bold;
     text-decoration: underline;
     color: red;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+h1 {
+    border-bottom: 1px solid black;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+div.error {
+    color: red;
+    font-weight:bold;
+}
+
+div.success {
+    color: green;
+    font-weight:bold;
 }
